--- a/clients.html
+++ b/clients.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>კლიენტები</title>
 </head>
@@ -82,7 +83,7 @@
     </div>
     <section class="clients-grid">
         <div>
-            <a href="#"><img src="media/img/smart web.png" alt="Logo"></a>
+            <a href="#"><img src="media/img/smartweb.png" alt="Logo"></a>
             <span class="line"></span>
             <a class="client-name" href="#">Smartweb</a>
         </div>
@@ -97,32 +98,12 @@
             <a class="client-name" href="#">Nike</a>
         </div>
         <div>
-            <a href="#"><img src="media/img/smart web.png" alt="Logo"></a>
+            <a href="#"><img src="media/img/smartweb.png" alt="Logo"></a>
             <span class="line"></span>
             <a class="client-name" href="#">Smartweb</a>
         </div>
         <div>
-            <a href="#"><img src="media/img/smart web.png" alt="Logo"></a>
-            <span class="line"></span>
-            <a class="client-name" href="#">Smartweb</a>
-        </div>
-        <div>
-            <a href="#"><img src="media/img/cola.png" alt="Logo"></a>
-            <span class="line"></span>
-            <a class="client-name" href="#">Coca cola</a>
-        </div>
-        <div>
-            <a href="#"><img src="media/img/nike.png" alt="Logo"></a>
-            <span class="line"></span>
-            <a class="client-name" href="#">Nike</a>
-        </div>
-        <div>
-            <a href="#"><img src="media/img/smart web.png" alt="Logo"></a>
-            <span class="line"></span>
-            <a class="client-name" href="#">Smartweb</a>
-        </div>
-        <div>
-            <a href="#"><img src="media/img/smart web.png" alt="Logo"></a>
+            <a href="#"><img src="media/img/smartweb.png" alt="Logo"></a>
             <span class="line"></span>
             <a class="client-name" href="#">Smartweb</a>
         </div>
@@ -137,7 +118,27 @@
             <a class="client-name" href="#">Nike</a>
         </div>
         <div>
-            <a href="#"><img src="media/img/smart web.png" alt="Logo"></a>
+            <a href="#"><img src="media/img/smartweb.png" alt="Logo"></a>
+            <span class="line"></span>
+            <a class="client-name" href="#">Smartweb</a>
+        </div>
+        <div>
+            <a href="#"><img src="media/img/smartweb.png" alt="Logo"></a>
+            <span class="line"></span>
+            <a class="client-name" href="#">Smartweb</a>
+        </div>
+        <div>
+            <a href="#"><img src="media/img/cola.png" alt="Logo"></a>
+            <span class="line"></span>
+            <a class="client-name" href="#">Coca cola</a>
+        </div>
+        <div>
+            <a href="#"><img src="media/img/nike.png" alt="Logo"></a>
+            <span class="line"></span>
+            <a class="client-name" href="#">Nike</a>
+        </div>
+        <div>
+            <a href="#"><img src="media/img/smartweb.png" alt="Logo"></a>
             <span class="line"></span>
             <a class="client-name" href="#">Smartweb</a>
         </div>
